# Student-Record-Management-System

./: CMakeLists.txt  ReadMe.md  attendancedialog.cpp  attendancedialog.h  main.cpp  marksdialog.cpp  marksdialog.h  srmswindow.cpp  srmswindow.h
